--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -109,6 +109,7 @@
 		top: 100%;
 		margin-top: 25px;
 		display: none;
+		z-index: 3;
 		
 		&-item {
 			width: 100%;
@@ -191,6 +192,7 @@
 		padding: 30px 20px 10px 20px;
 		box-shadow: 5px 10px 20px 0 rgba(0, 0, 0, 0.25%);
 		border-radius: 4px;
+		z-index: 4;
 
 		&-close {
 			display: flex;
