--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,45 +1,45 @@
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-Thin.ttf') format('truetype');
-    font-weight: 100;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-ThinItalic.ttf') format('truetype');
-    font-weight: 100;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-Ultralight.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-UltralightItalic.ttf') format('truetype');
-    font-weight: 200;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-LightItalic.ttf') format('truetype');
-    font-weight: 300;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-Thin.ttf') format('truetype');
+//     font-weight: 100;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-ThinItalic.ttf') format('truetype');
+//     font-weight: 100;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-Ultralight.ttf') format('truetype');
+//     font-weight: 200;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-UltralightItalic.ttf') format('truetype');
+//     font-weight: 200;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-Light.ttf') format('truetype');
+//     font-weight: 300;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-LightItalic.ttf') format('truetype');
+//     font-weight: 300;
+//     font-style: italic;
+// }
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
@@ -47,13 +47,13 @@
     font-weight: normal;
     font-style: normal;
 }
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-RegularItalic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-RegularItalic.ttf') format('truetype');
+//     font-weight: normal;
+//     font-style: italic;
+// }
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
@@ -61,13 +61,13 @@
     font-weight: 500;
     font-style: normal;
 }
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-MediumItalic.ttf') format('truetype');
-    font-weight: 500;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-MediumItalic.ttf') format('truetype');
+//     font-weight: 500;
+//     font-style: italic;
+// }
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
@@ -75,13 +75,13 @@
     font-weight: 600;
     font-style: normal;
 }
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-SemiboldItalic.ttf') format('truetype');
-    font-weight: 600;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-SemiboldItalic.ttf') format('truetype');
+//     font-weight: 600;
+//     font-style: italic;
+// }
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
@@ -89,13 +89,13 @@
     font-weight: bold;
     font-style: normal;
 }
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-BoldItalic.ttf') format('truetype');
-    font-weight: bold;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-BoldItalic.ttf') format('truetype');
+//     font-weight: bold;
+//     font-style: italic;
+// }
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
@@ -103,20 +103,20 @@
     font-weight: 800;
     font-style: normal;
 }
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-HeavyItalic.ttf') format('truetype');
-    font-weight: 800;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-BlackItalic.ttf') format('truetype');
-    font-weight: 900;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-HeavyItalic.ttf') format('truetype');
+//     font-weight: 800;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-BlackItalic.ttf') format('truetype');
+//     font-weight: 900;
+//     font-style: italic;
+// }
 @font-face {
     font-family: 'SF Pro Display';
     font-display: swap;
@@ -126,48 +126,48 @@
 }
 
 
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-Thin.ttf') format('truetype');
-    font-weight: 100;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-ThinItalic.ttf') format('truetype');
-    font-weight: 100;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-Ultralight.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-UltralightItalic.ttf') format('truetype');
-    font-weight: 200;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-LightItalic.ttf') format('truetype');
-    font-weight: 300;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-Thin.ttf') format('truetype');
+//     font-weight: 100;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-ThinItalic.ttf') format('truetype');
+//     font-weight: 100;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-Ultralight.ttf') format('truetype');
+//     font-weight: 200;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-UltralightItalic.ttf') format('truetype');
+//     font-weight: 200;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-Light.ttf') format('truetype');
+//     font-weight: 300;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-LightItalic.ttf') format('truetype');
+//     font-weight: 300;
+//     font-style: italic;
+// }
 @font-face {
     font-family: 'Poppins';
     font-display: swap;
@@ -175,41 +175,41 @@
     font-weight: normal;
     font-style: normal;
 }
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-RegularItalic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-MediumItalic.ttf') format('truetype');
-    font-weight: 500;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-Semibold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-SemiboldItalic.ttf') format('truetype');
-    font-weight: 600;
-    font-style: italic;
-}
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-RegularItalic.ttf') format('truetype');
+//     font-weight: normal;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-Medium.ttf') format('truetype');
+//     font-weight: 500;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-MediumItalic.ttf') format('truetype');
+//     font-weight: 500;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-Semibold.ttf') format('truetype');
+//     font-weight: 600;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-SemiboldItalic.ttf') format('truetype');
+//     font-weight: 600;
+//     font-style: italic;
+// }
 @font-face {
     font-family: 'Poppins';
     font-display: swap;
@@ -217,49 +217,38 @@
     font-weight: bold;
     font-style: normal;
 }
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-BoldItalic.ttf') format('truetype');
-    font-weight: bold;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-Heavy.ttf') format('truetype');
-    font-weight: 800;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-HeavyItalic.ttf') format('truetype');
-    font-weight: 800;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-BlackItalic.ttf') format('truetype');
-    font-weight: 900;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'Poppins';
-    font-display: swap;
-    src: url('../fonts/Poppins-Black.ttf') format('truetype');
-    font-weight: 900;
-    font-style: normal;
-}
-
-
-
-
-
-
-
-
-
-
-
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-BoldItalic.ttf') format('truetype');
+//     font-weight: bold;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-Heavy.ttf') format('truetype');
+//     font-weight: 800;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-HeavyItalic.ttf') format('truetype');
+//     font-weight: 800;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-BlackItalic.ttf') format('truetype');
+//     font-weight: 900;
+//     font-style: italic;
+// }
+// @font-face {
+//     font-family: 'Poppins';
+//     font-display: swap;
+//     src: url('../fonts/Poppins-Black.ttf') format('truetype');
+//     font-weight: 900;
+//     font-style: normal;
+// }
