--- a/src/scss/main/main-4.scss
+++ b/src/scss/main/main-4.scss
@@ -107,6 +107,7 @@
     &__link {
         font-family: "SF Pro Display", Sans-serif;
         font-size: 17px;
+        line-height: 1;
         font-weight: 600;
         color: #FFFFFF;
         background-color: #FF0099;
