--- a/src/scss/main/main-9.scss
+++ b/src/scss/main/main-9.scss
@@ -75,6 +75,7 @@
         &-button {
             font-family: "SF Pro Display", Sans-serif;
             font-size: 15px;
+            line-height: 1;
             font-weight: 600;
             color: #363636;
             background-color: #FAE61D;
