--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -61,6 +61,7 @@
         width: 100%;
         transition: all 300ms ease-in-out;
         margin-bottom: 10px;
+        font-weight: 400;
         &:focus {
             border-color: #f04a76;
         }
