--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -71,6 +71,7 @@
             font-size: 14px;
             line-height: 16px;
             font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+            font-weight: 400;
         }
     }
     &__social {
@@ -96,6 +97,7 @@
             font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 14px;
             line-height: 16px;
+            font-weight: 400;
         }
         &-copy {
             color: #ccc;
