--- a/src/scss/main/main-3.scss
+++ b/src/scss/main/main-3.scss
@@ -5,6 +5,7 @@
     padding: 40px 0px 130px 0px;
     &__wrap {
         width: 1024px;
+        padding: 0 2%;
     }
     &__title {
         font-family: "SF Pro Display", Sans-serif;
@@ -23,8 +24,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 191px;
-        height: 340px;
+        width: 20%;
+        height: auto;
         position: relative;
         margin-right: 10px;
         transition: all .5s ease 0.1s;
@@ -78,17 +79,18 @@
         transition: all .5s ease 0.1s;
     }
     &__img {
-        width: 191px;
-        height: 340px;
+        width: 100%;
+        height: auto;
         z-index: -1;
     }
 }
 
 
-@media (max-width: 1100px) {
+@media (max-width: 767px) {
     .main-3 {
         &__wrap {
             width: 96%;
+            padding: 0;
         }
         &__items {
             flex-direction: column;
