--- a/src/scss/main/main-7.scss
+++ b/src/scss/main/main-7.scss
@@ -106,6 +106,7 @@
         padding-left: 28px;
         margin-bottom: 25px;
         line-height: 1.5;
+        font-weight: 400;
         &::before {
             content: counter(advertiser-instruction-ol-counter);
             font-family: "SF Pro Display", Sans-serif;
@@ -130,6 +131,7 @@
         transition: all 0.3s;
         cursor: pointer;
         outline: none;
+        line-height: 1;
         &:hover,
         &:focus {
             background-color: rgba(0, 0, 0, 0);
