--- a/src/scss/sticky.scss
+++ b/src/scss/sticky.scss
@@ -25,5 +25,6 @@
         font-family: 'Poppins',Arial,Helvetica,sans-serif;
         font-size: 16px;
         margin-left: 10px;
+        font-weight: 400;
     }
 }
