--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -63,6 +63,12 @@
 					opacity: 1;
 				}
 			}
+			&.active {
+				&::after {
+					width: 20px;
+					opacity: 1;
+				}
+			}
 			&--submenu {
 				position: relative;
 				&::before {
