--- a/src/scss/rek/rek-3.scss
+++ b/src/scss/rek/rek-3.scss
@@ -1,8 +1,10 @@
 .rek-3 {
     margin-top: 80px;
+    margin-bottom: 145px;
     width: 100%;
     display: flex;
     justify-content: center;
+    position: relative;
     &__wrap {
         width: 1024px;
     }
@@ -12,8 +14,119 @@
         font-family: "SF Pro Display", Sans-serif;
         font-size: 30px;
         font-weight: 600;
-        text-transform: none;
+        text-transform: uppercase;
         line-height: 1.4em;
         text-align: center;
+    }
+    &__items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__item {
+        width: 848px;
+        display: flex;
+        align-items: center;
+        margin-bottom: 65px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        &-title {
+            color: #FF009E;
+            font-family: "SFProDisplay", Sans-serif;
+            font-size: 22px;
+            font-weight: 600;
+            text-transform: uppercase;
+            line-height: 1.5em;
+        }
+        &-text {
+            color: #363636;
+            font-family: "SFProDisplay", Sans-serif;
+            font-weight: 500;
+            line-height: 1.7em;
+            letter-spacing: normal;
+        }
+        &-block {
+            width: 148px;
+            height: 148px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 25px;
+        }
+        &-info {
+            width: 675px;
+        }
+        &-svg {
+            width: 115px;
+            height: 115px;
+        }
+    }
+    &__img {
+        position: absolute;
+        left: 0;
+        top: 25%;
+        width: 230px;
+        height: 557px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .rek-3 {
+        &__wrap {
+            width: 96%;
+        }
+        &__img {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .rek-3 {
+        &__title {
+            font-size: 25px;
+            margin-bottom: 50px;
+        }
+        &__item {
+            flex-direction: column;
+            width: auto;
+            &-block {
+                width: 115px;
+                height: 115px;
+                margin-bottom: 25px;
+                margin-right: 0;
+            }
+            &-title {
+                text-align: center;
+                font-size: 18px;
+            }
+            &-text {
+                margin-top: 10px;
+                text-align: center;
+                font-size: 14px;
+            }
+            &-info {
+                width: auto;
+            }
+            &-svg {
+                width: 100px;
+                height: 100px;
+                background-size: 100px 100px;
+            }
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .rek-3 {
+        &__item {
+            &-svg {
+                width: 80px;
+                height: 80px;
+                background-size: 80px 80px;
+            }
+        }
     }
 }
