--- a/src/scss/rek/rek-4.scss
+++ b/src/scss/rek/rek-4.scss
@@ -39,8 +39,8 @@
         font-size: 30px;
         font-weight: 600;
         text-transform: none;
-        line-height: 42px;
-        margin: 0 0 80px 0;
+        line-height: 1;
+        margin: 0 0 105px 0;
         text-align: center;
         text-transform: uppercase;
     }
@@ -51,12 +51,67 @@
         width: 220px;
         height: 517px;
     }
+    &__items {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__item {
+        width: 32%;
+        &-title {
+            text-transform: uppercase;
+            color: #363636;
+            font-family: "SF Pro Display", Sans-serif;
+            font-size: 23px;
+            font-weight: 600;
+            line-height: 1;
+        }
+        &-text {
+            margin-top: 40px;
+            line-height: 1.7em;
+            color: #363636;
+            font-family: "SF Pro Display", Sans-serif;
+            font-size: 18px;
+            font-weight: 500;
+        }
+    }
+    &__visa {
+        width: 454px;
+        height: auto;   
+        margin: 90px auto 0 auto;
+        max-width: 100%;
+        &-img {
+            width: 100%;
+            height: auto;
+        }
+    }
 }
 
 @media (max-width: 1100px) {
     .rek-4 {
         &__wrap {
-            width: 96%;
+            width: 90%;
+        }
+        &__img {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .rek-4 {
+        &__title {
+            font-size: 25px;
+            line-height: 1.3em;
+        }
+        &__items {
+            flex-direction: column;
+        }
+        &__item {
+            width: auto;
+            margin-bottom: 40px;
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
     }
 }
