--- a/src/scss/blogeram/blog-2.scss
+++ b/src/scss/blogeram/blog-2.scss
@@ -3,7 +3,21 @@
     display: flex;
     justify-content: center;
     position: relative;
-    margin-top: 80px;
+    padding: 80px 0;
+    overflow: hidden;
+
+    &:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-bottom: 120px solid #69DDCA;
+        border-left: 100vw solid transparent;
+        background: transparent;
+        z-index: 200;
+    }
 
     &__wrap {
         width: 1024px;
