--- a/src/scss/faq.scss
+++ b/src/scss/faq.scss
@@ -73,6 +73,13 @@
                 margin-bottom: 0;
             }
         }
+        ul {
+            list-style: disc;
+            li {
+                margin-left: 16px;
+                line-height: 28px;
+            }
+        }
 
     }
 }
