--- a/src/scss/blogeram/blog-3.scss
+++ b/src/scss/blogeram/blog-3.scss
@@ -26,7 +26,7 @@
         color: #363636;
         font-family: "SF Pro Display", Sans-serif;
         font-size: 30px;
-        font-weight: 600;
+        font-weight: 700;
         text-transform: none;
         line-height: 1.4em;
         margin: 0px 0px 80px 0px;
@@ -83,11 +83,12 @@
             color: #363636;
             font-family: "SF Pro Display", Sans-serif;
             font-size: 24px;
-            font-weight: 600;
+            font-weight: 700;
             line-height: 30px;
             width: 412px;
             text-align: right;
             margin-right: 25px;
+            text-transform: uppercase;
         }
         &-svg {
             width: 70px;
