--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -54,13 +54,13 @@
 //     font-weight: normal;
 //     font-style: italic;
 // }
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-Medium.ttf') format('truetype');
+//     font-weight: 500;
+//     font-style: normal;
+// }
 // @font-face {
 //     font-family: 'SF Pro Display';
 //     font-display: swap;
@@ -68,13 +68,13 @@
 //     font-weight: 500;
 //     font-style: italic;
 // }
-@font-face {
-    font-family: 'SF Pro Display';
-    font-display: swap;
-    src: url('../fonts/SFProDisplay-Semibold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'SF Pro Display';
+//     font-display: swap;
+//     src: url('../fonts/SFProDisplay-Semibold.ttf') format('truetype');
+//     font-weight: 600;
+//     font-style: normal;
+// }
 // @font-face {
 //     font-family: 'SF Pro Display';
 //     font-display: swap;
@@ -186,28 +186,28 @@
 //     font-family: 'Poppins';
 //     font-display: swap;
 //     src: url('../fonts/Poppins-Medium.ttf') format('truetype');
-//     font-weight: 500;
+//     font-weight: 400;
 //     font-style: normal;
 // }
 // @font-face {
 //     font-family: 'Poppins';
 //     font-display: swap;
 //     src: url('../fonts/Poppins-MediumItalic.ttf') format('truetype');
-//     font-weight: 500;
+//     font-weight: 400;
 //     font-style: italic;
 // }
 // @font-face {
 //     font-family: 'Poppins';
 //     font-display: swap;
 //     src: url('../fonts/Poppins-Semibold.ttf') format('truetype');
-//     font-weight: 600;
+//     font-weight: 700;
 //     font-style: normal;
 // }
 // @font-face {
 //     font-family: 'Poppins';
 //     font-display: swap;
 //     src: url('../fonts/Poppins-SemiboldItalic.ttf') format('truetype');
-//     font-weight: 600;
+//     font-weight: 700;
 //     font-style: italic;
 // }
 @font-face {
