--- a/src/scss/good-choice/good-4.scss
+++ b/src/scss/good-choice/good-4.scss
@@ -205,7 +205,7 @@
     
             }
             &-item {
-                // width: 425px;
+                width: 350px;
                 // margin-bottom: 30px;
                 // padding: 28px 17px 17px 17px;
     
@@ -254,6 +254,141 @@
                     // font-weight: 400;
                     // line-height: 26px;
                     font-size: 14px;
+                }
+            }
+        }
+    }
+
+}
+
+@media (max-width: 767px) {
+
+    .good-4 {
+        // width: 100%;
+        // display: flex;
+        // justify-content: center;
+        // margin: 80px 0;
+    
+        &__wrap {
+            // width: 96%;
+        }
+        &__title {
+            // text-align: center;
+            // color: #363636;
+            // font-family: "SF Pro Display", Sans-serif;
+            font-size: 25px;
+            line-height: 1.3em;
+            // font-weight: 700;
+            // text-transform: uppercase;
+        }
+        &__row {
+            // margin-top: 75px;
+            // display: flex;
+            // justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__left {
+    
+            &-items {
+    
+            }
+            &-item {
+                // display: flex;
+                // align-items: center;
+                // width: auto;
+                // margin-bottom: 65px;
+                flex-direction: column;
+                &-block {
+                }
+                &-svg {
+                    // width: 67px;
+                    // height: 67px;
+                    // display: flex;
+                    // justify-content: center;
+                    // align-items: center;
+                    // border-radius: 50%;
+                    // border: 3px solid #ff009e;
+                }
+                &-info {
+                    margin-left: 0px;
+                    margin-top: 20px;
+                }
+                &-title {
+                    // text-transform: uppercase;
+                    // color: #FF009E;
+                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-size: 18px;
+                    // font-weight: 700;
+                    // line-height: 1.5em;
+                    text-align: center;
+                }
+                &-text {
+                    // margin-top: 8px;
+                    // color: #363636;
+                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-size: 14px;
+                    // font-weight: 400;
+                    // line-height: 1.4em;
+                    text-align: center;
+                }
+            }
+        }
+        &__right {
+            margin-left: 0px;
+            &-items {
+    
+            }
+            &-item {
+                // width: 350px;
+                // margin-bottom: 30px;
+                // padding: 28px 17px 17px 17px;
+    
+                &:last-child {
+                    // margin-bottom: 0;
+                }
+                &--yellow {
+                    // background-color: #FFE600;
+                }
+                &--gray {
+                    // background-color: #F2F2F2;
+                    .good-4__right-item-title {
+                        // color: #BDBDBD;
+                    }
+                    .good-4__right-item-svg {
+                        // border: 5px solid #BDBDBD;
+                    }
+                }
+    
+                &-head {
+                    // display: flex;
+                    // align-items: center;
+                }
+                &-svg {
+                    // width: 48px;
+                    // height: 48px;
+                    // display: flex;
+                    // justify-content: center;
+                    // align-items: center;
+                    // border-radius: 50%;
+                    // border: 5px solid #ff009e;
+                }
+                &-title {
+                    // margin-left: 25px;
+                    // text-transform: uppercase;
+                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-size: 21px;
+                    // font-weight: 700;
+                }
+                &-body {
+                    // margin-top: 15px;
+                }
+                &-text {
+                    // color: #363636;
+                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-weight: 400;
+                    // line-height: 26px;
+                    // font-size: 14px;
                 }
             }
         }
